--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -395,6 +395,43 @@
     /*
     ---------------------------------------------- audio menu 
     */
+    .off_button_menu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        width: 100%;
+        position: fixed;
+        z-index: 300;
+        backdrop-filter: blur(10px);
+        padding-top: 1rem;
+
+        
+    }
+    .off_button_menu .btn_square_wide{
+      background-color: rgb(182, 83, 83);
+        height: 4rem;
+        width: 15rem;
+        border-radius: 1rem;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        gap: 1rem;
+      
+
+    
+
+    }
+        .off_button_menu .btn_square_wide img{
+            height: 80%;
+        }
+        .off_button_menu .btn_square_wide p{
+           font-size: 1rem;
+        }
+
+
 
     .zone_menu{
 
@@ -405,7 +442,7 @@
         width: 100%;
         height: 100%;
         display: flex;
-        align-content: center;
+        align-content: flex-start;
         justify-content: center;
         flex-wrap: wrap;
         gap: 7px;
@@ -422,15 +459,23 @@
 
     .zone_container{
        z-index: 50;
-        height: 8.5rem;
-        width: 23rem;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: column;
+        height: 18rem;
+        width: 20rem;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(5,1fr);
+
+
+
+      
+
+
+
         border-radius: 10px;
         backdrop-filter: blur(20px);
         background-color: rgb(70, 70, 70);
+        border: solid 2px rgb(170, 170, 170);
+        box-shadow: 5px 5px 10px black;
     }
         #active_zone{
             background-color: rgb(79, 125, 154);
@@ -438,19 +483,67 @@
 
         }
     .zone_title{
-        text-align: center;
-        font-size: larger;
+        grid-row: 1/3;
+        grid-column: 1/5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.6rem;
+       
     }
+        
         .zone_controls{
+            grid-column: 1/5;
+            grid-row: 2/5;
             width: 100%;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-
+            z-index: 100;
+        
         }
-    
+            .zone_controls .btn_circle{
+                height: 4.25rem;
+                width: 4.25rem;
+                z-index: 100;
+            }
+
+            .zone_controls .btn_square_wide{
+                height: 4.25rem;
+                width: 8rem;
+                z-index: 100;
+            }
 
 
+            .power_on_off{
+                width: 100%;
+                grid-column: 1/5;
+                grid-row: 5/6;
+
+                display: flex;
+                justify-content: center;
+               
+            }
+                .power_on{
+                    border-radius:10px ;
+                   
+                    background-color: rgb(55, 116, 75);
+                    text-align: center;
+                }
+                    .power_on p{
+                        font-size: large;
+                    }
+
+                .power_off{
+                    border-radius:10px ;
+                   
+                    background-color: rgb(153, 80, 80);
+                }
+                    .power_off p{
+                        font-size: large;
+                    }
+     
+     
 
 
     @media screen and (width: 1180px) and (height: 776px) {
