--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -42,6 +42,10 @@
 
    background-color: rgb(70, 70, 70, .75);
    backdrop-filter: blur(30px);
+   animation: controller-load 1s;
+
+   position: relative;
+   bottom: 3.5rem;
 
      
 }
@@ -84,7 +88,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(70,70,70);
-  
+    border-radius: 10px;
 }
     .feedback_viewer h1{
         width: 92%;
@@ -208,7 +212,9 @@
         height: 2rem;
         width: 2rem;
         border-radius: 100%;
-        border: solid 2px black
+        border: solid 2px black;
+        background-color: rgb(146, 146, 146);
+        backdrop-filter: blur(20px);
      }
    
 
@@ -239,8 +245,10 @@
         grid-column: 4/10;
         display: flex;
         justify-content: space-evenly;
-        align-items: center;
+        align-items: flex-start;
         width: 100%;
+        height: 100%;
+
     }
 
 
@@ -254,12 +262,18 @@
         grid-column: 10/13;
         grid-row: 2/3;
         text-align: center;
-        border-bottom: solid 1px black;
+     
         width: 70%;
+        margin: 0%;
+        
 
     }
     .security_zones_title h2{
-        color: black;
+        font-size: 2rem;
+        font-weight: 100;
+        color: rgb(255, 255, 255);
+        border: solid 2px rgb(255, 255, 255);
+        border-radius: 20px;
 
     }
     .security_zones{
@@ -318,27 +332,29 @@
         }
 
         .security_dashboard{
-            grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 6% 6% 1fr 1fr 1fr 1fr 1fr 1fr;
             overflow: hidden;
 
         }
 
-        .light_indicator{
-
-        }
    
         
         .security_dashboard .title_info{
-            font-size: x-large;
-            grid-column: 2/12;
+            
+                font-size: 1.75rem;
+                grid-column: 1/13;
+                font-weight: 100;
+            
+
         
         }
 
         .security_keypad_container{
             grid-column: 1/13;
-            grid-row: 3/8;
+            grid-row: 4/9;
             width: 90%;
             height: 100%;
+            bottom: 0;
         }
 
        
@@ -350,10 +366,11 @@
         
         .control_container{
             grid-column: 1/13;
-            grid-row: 8;
+            grid-row: 3;
             flex-direction: row;
-            position: relative;
-            top: 10px;
+            justify-content: space-between;
+            align-items: center;
+            
         }
             .control_container .btn_circle{
                 height: 4.75rem;
@@ -364,6 +381,7 @@
             .light_indicator{
                 grid-column: 1/13;
                 gap: 10px;
+                height: 100%;
             }
     
             .control_container .btn_circle{
@@ -389,14 +407,24 @@
 
 
 
-    @media only screen and (max-device-width: 390px) and (max-device-height: 763px) and (orientation: portrait){
+    @media only screen and (max-device-width: 390px) and (orientation: portrait){
     
       .control_container .btn_circle{
         width: 5rem;  
+
+
     }
 
 
+        .security_dashboard .title_info{
+            
+                font-size: 1.5rem;
+                grid-column: 1/13;
+                font-weight: 100;
+            
 
+        
+        }
 
 
 
