--- a/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
+++ b/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
@@ -404,3 +404,10 @@
     
 
 
+
+
+@media only screen and (max-device-width: 375px) and (orientation: portrait){
+.container_title{
+    font-size: large;
+}
+}
