--- a/src/assets/css/controllers/appleTv.css
+++ b/src/assets/css/controllers/appleTv.css
@@ -165,6 +165,10 @@
     }
 
 
+    #center_button{
+        height: 6rem;
+        width: 6rem;
+    }
 
 
 
@@ -396,3 +400,63 @@
                             
                             
                             }
+
+
+
+
+@media only screen and (max-device-height:430px) and (orientation:landscape){
+
+    #controller_layout_back_button{
+        grid-column: 1/3;
+    }
+    #reboot_button{
+        grid-column: 13/15;
+    }
+
+    .side_controls_grid{
+        height: 70%;
+        width: 70%;
+    }
+    
+    .circle-menu{
+        height: 70%;
+        width: 70%;
+
+    }
+
+    .controller_grid .control-icon.right{
+        right: 20px;
+    }
+        .controller_grid .control-icon.right .btn_circle{
+            height: 4.35rem;
+            width: 4.35rem;
+        }
+    .controller_grid .control-icon.left{
+        left: 20px;
+    }
+        .controller_grid .control-icon.left .btn_circle{
+            height: 4.35rem;
+            width: 4.35rem;
+        }
+    .controller_grid .control-icon.top{
+        top: 20px;
+    }
+        .controller_grid .control-icon.top .btn_circle{
+            height: 4.35rem;
+            width: 4.35rem;
+        }
+    .controller_grid .control-icon.bottom{
+        bottom: 20px;
+    }
+        .controller_grid .control-icon.bottom .btn_circle{
+            height: 4.35rem;
+            width: 4.35rem;
+        }
+
+        
+    #center_button{
+        height: 5rem;
+        width: 5rem;
+    }
+        
+}
