--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -7,6 +7,13 @@
     z-index: 10;
 }
 
+.audio_back_button{
+    display: none;
+}
+   
+
+
+
 .audio_dashboard{
     width: 100%;
     height: 100vh;
@@ -403,7 +410,6 @@
         width: 100%;
         position: fixed;
         z-index: 300;
-        backdrop-filter: blur(10px);
         padding-top: 1rem;
 
         
@@ -522,6 +528,8 @@
 
                 display: flex;
                 justify-content: center;
+
+                padding-bottom: 5px;
                
             }
                 .power_on{
@@ -623,6 +631,12 @@
 
 
     @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+       
+       .off_button_menu{
+        padding-top: 5px;
+        top: 0px
+       }
+       
         .audio_dashboard{
             grid-template-rows:repeat(9,1fr)
 
@@ -873,6 +887,32 @@
                         height: 75%;
                         filter: invert(1);
                     }
+
+
+                    .audio_back_button{
+                        grid-column: 1/3;
+                        grid-row: 1;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 100%;
+                        width: 100%;
+
+                        z-index: 10;
+                    }
+                        .audio_back{
+                            height: 35%;
+                            width: 65%;
+                            border-radius: 15px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                        }
+                            .audio_back img{
+                                height:80%;
+                            }
+                    
                     
                     
     }
@@ -913,6 +953,30 @@
         }
     }
 
+
+    @media screen and (max-device-width: 375px) and (orientation: portrait) {
+
+        .current_postition{
+            bottom: 0px;
+        }
+
+        .end_postition{
+            bottom: 0px;
+        }
+
+        .playback_controls .btn_circle{
+            width: 2.75rem;
+            height: 2.75rem;
+        }
+        .volume_controls .btn_circle{
+            width: 4.5rem;
+            height: 2.25rem;
+            border-radius: 30px;
+        }
+       
+
+
+    }
 
 
 
