--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -693,9 +693,7 @@ body {
           }
 
 
- 
-
-
+        
 
       
     }
@@ -716,4 +714,27 @@ body {
           box-shadow: inset 1px 1px 2px 1px  rgba(252, 234, 187, 0.3), inset -1px -1px 3px 1px  rgba(252, 234, 187, 0.3), 4px 4px 15px 2px rgb(0, 0, 0, 0.25) , -4px -4px 15px 2px rgba(0, 0, 0, .25);         
       }        
       
+      }
+
+
+
+
+      @media only screen and (max-device-width: 375px) and (orientation: portrait){
+        .btn_not_selected{
+          height: 4rem;
+          width: 4rem;
+          border-radius: 100%;
+     
+  
+          
+        }
+  
+        .btn_selected{
+          height: 4rem;
+          width: 4rem;
+          border-radius: 100%;
+          background-color: rgb(70, 70, 70, .95);
+  
+          
+        }
       }
