--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -77,6 +77,7 @@
     gap: 10px;
     overflow: hidden;
     height: 100%;
+    width: 100%;
 
     }
 
@@ -289,6 +290,13 @@
         margin: 0%;
         padding: 0%;
         color: black;
+    }
+
+    
+
+    .volume_mute_btn{
+    height: 50%;
+    
     }
 
     
@@ -859,6 +867,7 @@
         position: relative;
         top: 5px;
         overflow: visible;
+        width: 0%;
      
     }
         .source_card{
@@ -1219,6 +1228,13 @@
      
         font-size: 1.75rem;
     }
+
+
+    .room_sources_container{
+
+        width: 0%;
+     
+    }
     /*
     ----------------------------------------------------------------------- source card
     */
@@ -1263,6 +1279,28 @@
 
 
 
+/*
+------------------------- iphone 16
+*/
+
+
+@media only screen and (max-device-width: 375px) and (orientation: portrait){
+    .generic_room .title_info{
+        font-size: x-large;
+    }
+    .source_card{
+        height: 10rem;
+        width: 9.5rem;
+    }
+
+    .light_tile{
+        height: 10rem;
+        width: 9.5rem;
+    }
+      .light_tile .light_info .light_name{
+            font-size: large;
+        }
+}
 
 
 
@@ -1276,8 +1314,44 @@
 
 
 
+@media only screen and (max-device-height: 430px) and  (orientation: landscape){
+    .generic_room .title_info{
+        font-size: x-large;
+    }
+    .source_card{
+        height: 40%;
+        width: 20%;
+    }
+        .source_card .img_container{
+            height: 70%;    
+        }
+    
+    .light_tile{
+        height: 40%;
+        width: 20%;
+    }
+        .light_tile .light_info p{
+            font-size: medium;
+        }
+        .light_controls .btn_circle{
+            height: 3rem;
+            width: 3rem;
+
+        }
 
 
+
+    .controller_layout{
+        grid-row:1/8;
+        grid-column: 1/10;
+        height: 100%;
+        width: 100%;
+    }
+
+    .volume_container{
+        display: none;
+    }
+}
 
 
 
