--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -284,55 +284,40 @@
 
 
 
-@media only screen and (max-device-height: 430px) and  (orientation: landscape){
+@media only screen and (max-device-height: 650px) and  (orientation: landscape){
 
-    .rooms_dashboard .title_info{
-        font-size: x-large;
-    }
     .room_card{
-        height: 40%;
-        width: 20%;
+      display: none;
     }
 
     .nav_clock{
         display: none;
     }
     .nav{
-        grid-row:2/10;
-        justify-content: center;
-        height: 100%;
+        display: none;
+    }
+    .nav_container{
+        backdrop-filter: none;
+    }
+    .nav_container::before{
+        background-color: transparent;
     }
 
-    .btn_not_selected p {
-        font-size: medium;
-    }
-    .btn_selected p{
-        font-size: medium;
+    .title_info{
+        grid-column: 2/12;
+
+        text-align: center;
+        font-weight: 100;
+        font-size: xx-large;
     }
 
-    .btn_selected {
-        height: 3rem;
-        width: 3.75rem;
-        border-radius: 10px;
-        animation: none;
-    }
-    .btn_not_selected{
-        height: 3rem;
-        width: 4rem;
-    }
-    .back_button{
-        height: 3rem;
-        width: 4rem;
-        border-radius: 20px;
-        border: solid 1px black
-    }
-
-    
-  
-
-  
-
-    .room_card p{
-        font-size: medium;
+    .rooms_dashboard .landscape_warning{
+        grid-column: 2/12;
+        grid-row: 2/9;
+        z-index: 10;
+ 
     }
 }
+
+
+
