--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -503,9 +503,6 @@ body {
 }
 
 
-#card_glow{
-}
-
 
         @keyframes glow1 {
           0%{
@@ -622,7 +619,13 @@ body {
     #mobile_home_btn{
       display: none;
     }
-    @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+   
+   
+   
+   
+   
+   
+    @media only screen and (max-device-width: 430px) and (orientation: portrait){
       .title_info{
           font-size: x-large;
           grid-column: 2/12;
@@ -736,5 +739,56 @@ body {
           background-color: rgb(70, 70, 70, .95);
   
           
+        }
+      }
+
+
+      .landscape_warning{
+        display: none;
+      }
+
+
+
+
+
+      @media only screen and (max-device-height: 650px) and (orientation: landscape){
+
+        .landscape_warning{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+     
+          width: 100%;
+          height: 50%;
+          backdrop-filter: blur(10px);
+          border-radius: 10px;
+          position: relative;
+          z-index: 1;
+          animation: controller-load 1s;
+          padding-inline: 20px;
+        }
+          .landscape_warning::before{
+            content: " ";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(146, 5, 5);
+            opacity: 0.3750;
+            z-index: 0;
+            border-radius: 10px;
+        
+          }
+        .landscape_warning h1 {
+          z-index: inherit;
+          text-align:center;
+          font-size: x-large;
+          font-weight: 100;
+        }
+        .landscape_warning img {
+          z-index: inherit;
+          filter: invert(1);
+          height: 50%;
         }
       }
