--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -192,7 +192,7 @@
 
 
 
-@media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+@media only screen and (max-device-width: 550px)  and (orientation: portrait){
     .rooms_dashboard{
         grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
     }
@@ -227,7 +227,7 @@
     display: none;
 }
 .mobile_back_btn .back_button{
-    display: block;
+    display: flex;
 }
 .nav{
     width: 100%;
@@ -243,15 +243,22 @@
 ---------------------------------------------- Cards
 */
 .room_selection_options{
+
     grid-column: 1/13;
     grid-row: 2/8;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+    width: 100%;
+    height: 90%;
+    justify-items: center
 }
 .room_card{
-    height: 10rem;
-    width: 11rem;
+    height: 100%;
+    width: 100%
 }
     .room_card .room_name{
-        font-size: 1.1rem;
+        font-size: large;
     }
 
 
@@ -264,7 +271,7 @@
 
 /*
 ----------------------------------------- iphone 14
-*/
+
 
 @media only screen and (max-device-width: 390px) and (max-device-width: 763px) and (orientation: portrait){
     .room_card{
@@ -283,6 +290,12 @@
 }
 
 
+
+
+
+
+
+*/
 
 @media only screen and (max-device-height: 650px) and  (orientation: landscape){
 
@@ -318,6 +331,3 @@
  
     }
 }
-
-
-
