--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -179,10 +179,7 @@
         width: 4.5rem;
         background-color: rgb(85, 83, 83);
     }
-    .playback_controls .transport_button_active{
-        height: 4.5rem;
-        width: 4.5rem;
-    }
+    
         .flip_image{
             transform: scaleX(-1);
         }
@@ -404,30 +401,27 @@
     */
     .off_button_menu {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         flex-direction: row;
         width: 100%;
         position: fixed;
         z-index: 300;
         padding-top: 1rem;
+        gap: 1px;
 
         
     }
-    .off_button_menu .btn_square_wide{
+    .off_button_menu #close_menu{
       background-color: rgb(182, 83, 83);
         height: 4rem;
-        width: 15rem;
+        width: 4rem;
         border-radius: 1rem;
 
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: row;
-        gap: 1rem;
-      
-
-    
 
     }
         .off_button_menu .btn_square_wide img{
@@ -436,6 +430,23 @@
         .off_button_menu .btn_square_wide p{
            font-size: 1rem;
         }
+
+        .off_button_menu #audio_zone_nav{
+            background-color: rgb(129, 128, 128);
+              height: 4rem;
+              width: 4rem;
+              border-radius: 1rem;
+      
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: row;
+      
+          }
+
+          #audio_zone_nav_active{
+            background-color: rgb(82, 142, 161);
+          }
 
 
 
@@ -459,14 +470,16 @@
 
         overflow-y: scroll;
         animation: controller-load 1000ms;
+        position: relative;
+        
     
     }
     
 
     .zone_container{
-       z-index: 50;
-        height: 18rem;
-        width: 20rem;
+        z-index: 50;
+        height: 14rem;
+        width: 23rem;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         grid-template-rows: repeat(5,1fr);
@@ -530,6 +543,7 @@
                 justify-content: center;
 
                 padding-bottom: 5px;
+
                
             }
                 .power_on{
@@ -537,6 +551,7 @@
                    
                     background-color: rgb(55, 116, 75);
                     text-align: center;
+                    border: none;
                 }
                     .power_on p{
                         font-size: large;
@@ -544,7 +559,8 @@
 
                 .power_off{
                     border-radius:10px ;
-                   
+                    border: none;
+
                     background-color: rgb(153, 80, 80);
                 }
                     .power_off p{
@@ -667,13 +683,13 @@
 
             .zone_menu{
                 display: grid;
+           
                 border-radius: 0%;
                 padding: 0%;
                 flex-direction: column;  
                 flex-wrap: nowrap;   
                 align-items: center; 
                 
-                align-content: space-between
 
 
             }
@@ -875,19 +891,7 @@
 
 
 
-                    .playback_controls .transport_button_active {
-                        height: 3rem;
-                        width: 3rem;
-                    }
-                    
-                    .transport_button_active:active{
-                        background-color: rgb(59, 117, 136);
-                    }
-                    .transport_button_active img{
-                        height: 75%;
-                        filter: invert(1);
-                    }
-
+               
 
                     .audio_back_button{
                         grid-column: 1/3;
@@ -932,6 +936,12 @@
             border-radius: 30px;
         }
        
+        .volume_controls .transport_button_active{
+            width: 4.5rem;
+            height: 2.25rem;
+            border-radius: 30px;
+            box-shadow:  inset 1px 1px 1px rgb(207, 205, 205), inset -1px -1px 1px rgb(207, 205, 205), 2px 2px 5px black;
+        }
 
 
     }
@@ -991,7 +1001,7 @@
 
 
 
-        @media only screen and (max-device-height: 650px) and  (orientation: landscape){
+        @media only screen and (max-height: 550px) and  (orientation: landscape){
            
 
             .album_art, .album_info, .playback_controls, .progress_bar, .volume_controls {
