--- a/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
+++ b/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
@@ -413,7 +413,7 @@
 }
 
 
-@media only screen and (max-device-height: 650px) and  (orientation: landscape){
+@media only screen and (max-height: 550px) and  (orientation: landscape){
 
     .pool_container, .spa_container, .button_container{
         display: none;
