--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -15,7 +15,7 @@
 
     z-index: 10;
 
-    animation: controller-load 1s;
+   
 }
     .security_dashboard .title_info{
         grid-column: 2/12;
@@ -429,7 +429,7 @@
 
 
 
-@media only screen and (max-device-height:650px) and (orientation:landscape){
+@media only screen and (max-height:500px) and (orientation:landscape){
     /*
     ------------------------------------------ Warning
     */
