--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -423,20 +423,45 @@ body {
 /*
 ---------------------------------------------------------- nav 
 */
+.room_back_corner{
+  grid-column: 1/2;
+  grid-row: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+  .back_button{
+    border-radius: 30px;
+    width: 5rem;
+  }
 
+  .room_home_corner .home_button{
+    border-radius: 30px;
+    width: 5rem;
+  }
+  .room_home_corner{
+    grid-column: 12/13;
+    grid-row: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+  }
 
 .nav_container{
   height: 100%;
   width: 100%;
   border-radius: 15px;
   background-color: transparent;
-  grid-row: 1/9;
+  grid-row: 2/9;
   display: grid;
   grid-template-rows: repeat(9, 1fr);
   justify-items: center;
   align-items: center;
-  animation: room_selection 1000ms;
-  backdrop-filter: blur(15px);
   position: relative;
   z-index: 1;
 }
@@ -444,14 +469,20 @@ body {
     z-index: 1;
   }
   .nav{
-    z-index: 1;
-      grid-row: 2/9;
+      z-index: 1;
+      grid-row: 1/10;
       height: 100%;
+      width: 85%;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;   
       gap: 1.75rem;
+      position: relative;
+      z-index: 1;
+      backdrop-filter: blur(15px);
+      animation: room_selection 1000ms;
+
   }
       .nav .btn_square{
           height: 5rem;
@@ -489,7 +520,7 @@ body {
   }
 
 
-  .nav_container::before{
+  .nav::before{
     content: " ";
     position: absolute;
     top: 0;
@@ -497,11 +528,18 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
-    opacity: 0.3250;
+    opacity: 0.4250;
     z-index: 0;
     border-radius: 20px;
 }
 
+
+.btn_not_selected{
+  z-index: 10
+}
+.btn_selected{
+  z-index: 10;
+}
 
 
         @keyframes glow1 {
@@ -751,7 +789,7 @@ body {
 
 
 
-      @media only screen and (max-device-height: 650px) and (orientation: landscape){
+      @media only screen and (max-height: 550px) and (orientation: landscape){
 
         .landscape_warning{
           display: flex;
@@ -763,7 +801,7 @@ body {
           backdrop-filter: blur(10px);
           border-radius: 10px;
           position: relative;
-          z-index: 1;
+          z-index: 10;
           animation: controller-load 1s;
           padding-inline: 20px;
         }
